# crafting-interpreters

./: README.md  settings.gradle.kts
.github/workflows/: cmake.yml
clox/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  file.c  file.h  lib.c  lib.h  main  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
clox-old/: chunk.c  chunk.h  clox  clox.cbp  compiler.c  compiler.h  debug.c  memory.c  object.c  scanner.c  table.c  value.c  value.h  vm.h
clox-old/clox.dSYM/Contents/Resources/DWARF/: clox
clox-old/main.dSYM/Contents/Resources/DWARF/: main
clox/dependencies/: CMakeLists.txt
clox/test/: CMakeLists.txt  tests-common.cpp  tests-compiler.cpp  tests-greatfun.cpp  tests-memorymanager.cpp  tests-scanner.cpp  tests-value.cpp  tests-vm.cpp
clox/test/testData/compiler/compilationError/: var-in-if.lox
clox/test/testData/compiler/disassemblyDump/: blocks.lox.assembly  brioche.lox  brioche.lox.assembly  empty.lox.assembly  globalVar.lox  globalVar.lox.assembly  print.lox.assembly  simple-upvalue.lox  simple-upvalue.lox.assembly  upvalue-disassembly.lox.assembly
clox/test/testData/vm/print/: blocks.lox  break-while.lox  brioche.lox.out  call-with-args.lox  coffeemaker.lox.out  doughnut.lox  doughnut.lox.out  expression.lox  fib35.lox  flattening.lox  globalVars.lox  no-sprinkles.lox.out  nqueens.lox  scone.lox.out  toast.lox  toast.lox.out  upvalue-disassembly.lox  upvalue.lox  var.lox
craftinginterpreters/: .gitignore
jlox/: build.gradle.kts  challenges
jlox/src/com/craftinginterpreters/lox/: ASTPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Parser.java  RPNPrinter.java  Resolver.java  Scanner.java  Stmt.java  Token.java
jlox/src/com/craftinginterpreters/tool/: GenerateAST.java
jlox/src/main/com/craftinginterpreters/lox/: ASTPrinter.java  Interpreter.java  LoxCallable.java  Parser.java  Stmt.java
testData/blackbox/: anoFun.lox  break-while.lox  const.lox  function-test.lox  print.lox  thrice.lox  uninitialized-read.lox
